frontend/src/components/ViewWrappers/ViewWrappers.scss
@import "stylebase/variables";
@import "stylebase/utils";

.View--padded,
.ViewSplitter-footer,
.ViewSplitter--padded {
  padding: $padding-wrapper;
}

.View {
  display: flex;
  height: 100%;
  position: relative;
  overflow: auto;
  align-items: flex-start;
  -webkit-overflow-scrolling: touch;
  scrollbar-width: thin;

  > *:not(.ViewSplitter) {
    flex-grow: 1;
  }

  &--mobile {
    flex-direction: column;

    @include bp-large() {
      flex-direction: row;
    }
  }
}

@include bp-large() {
  .View--container {
    @include container;
    box-shadow: 2px 3px 20px rgba($color-black, 0.2);
    height: calc(100% - 80px);
    margin: 80px auto 0;
    border-radius: $border-radius $border-radius 0 0;
  }
}

.ViewSplitter {
  overflow: auto;
  scrollbar-width: thin;
  -webkit-overflow-scrolling: touch;
  flex: 1 1 auto;
  position: relative;
  height: 100%;

  @include bp-large() {
    flex: 1 1 100%;

    & + & {
      border-left: 1px solid $color-middle-gray;
    }
  }
}

@include bp-large() {
  .ViewSplitter--sm {
    flex: 0 0 40vw;
    max-width: 700px;
    min-width: 500px;
  }

  .ViewSplitter--xs {
    flex: 1 0 30vw;
    max-width: 550px;
    min-width: 435px;
  }
}

.ViewSplitter-footer {
  flex: 0;
}

